# Project_DataLakes_TicketMaster

./: .gitignore  README.md  README_Laura.md  Test_infra.py  docker-compose.yml  pyproject.toml  test_infra.py
dags/: data_lake_pipeline.py
models/: drift_reference.csv  norm_params.json
results/: popularity_scores.csv
src/: .env  app.py  curated_ml.py  curated_ml2.py  graphs_popularity_score.py  ingestion.py  ingestion_fast.py  staging.py  train_model.py
src/models/: drift_reference.csv
src/results/: popularity_scores_true.csv
