[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-lake-practice"
version = "0.1.0"
description = "Projet Data Lake avec Ticketmaster, LocalStack, MySQL et MongoDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "pymysql>=1.1.0",
    "pymongo>=4.6.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "cryptography>=42.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

